deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scm
  labels:
    app.kubernetes.io/name: scm
